# smart-msme-credit-navigator

./: .gitignore  AGENTS.md  LICENSE  README.md  skills-lock.json  vercel.json
.agents/skills/google-fonts/: SKILL.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/api/: auth.py  score.py
backend/app/core/: auth_utils.py  config.py  database.py
backend/app/models/: business.py  user.py
backend/app/services/: credit_score.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/: firebase-messaging-sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/dashboard/score/: page.tsx
frontend/src/app/(dashboard)/dashboard/settings/: page.tsx
frontend/src/app/(dashboard)/dashboard/transactions/: page.tsx
frontend/src/app/(dashboard)/dashboard/upload/: page.tsx
frontend/src/components/animations/: AnimatedCounter.tsx  ScrollReveal.tsx  TextReveal.tsx
frontend/src/components/dashboard/: Header.tsx  Sidebar.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/components/sections/: CTA.tsx  Demo.tsx  DualAudience.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  PainPoints.tsx  SocialProof.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/lib/: api.ts
