[project]
name = "backend"
version = "0.1.0"
description = "Smart MSME Credit Navigator API - AI-powered credit scoring for Pakistani SMEs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "pydantic-settings>=2.0.0",
    "motor>=3.7.1",
    "pymongo>=4.17.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.32",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
]
